--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
-  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "index.js" }]
+  "builds": [{ "src": "index.js", "use": "@vercel/bun" }],
+  "routes": [{ "src": "/(.*)", "dest": "/index.js" }],
+  "functions": {
+    "index.js": {
+      "runtime": "@vercel/bun"
+    }
+  }
 }
