--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "prepare": "husky",
     "lint": "eslint",
     "lint:fix": "eslint --fix && prettier . --write",
-    "dev": "bun --watch index.js",
-    "dev:pm2": "pm2 start --interpreter ~/.bun/bin/bun index.js",
+    "dev": "node --watch index.js",
+    "dev:pm2": "pm2 start index.js",
     "dev:stop": "pm2 stop all",
     "start": "node index.js",
     "vercel-build": "echo 'No build step required'",
