--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dev:pm2": "pm2 start dev.js",
     "dev:stop": "pm2 stop all",
     "start": "node index.js",
+    "build": "echo 'No build step required'",
     "vercel-build": "echo 'No build step required'",
     "test": "vitest"
   },
